18 June 2009: Wouter
	- Fix of message parse bug where (specifically) an NSEC and RRSIG
	  in the wrong order would be parsed, but put wrongly into internal
	  structures so that later validation would fail.

17 June 2009: Wouter
	- CREDITS entry for cz.nic, sponsoring a 'summer of code' that was
	  used for the python code in unbound. (http://www.nic.cz/vip/ in cz).

16 June 2009: Wouter
	- Fixup opportunistic target query generation to it does not
	  generate queries that are known to fail.
	- Touchup on munin total memory report.
	- messages picked out of the cache by the iterator are checked
	  if their cname chain is still correct and if validation status
	  has to be reexamined.

15 June 2009: Wouter
	- iana portlist updated.

14 June 2009: Wouter
	- Fixed bug where cached responses would lose their security
	  status on second validation, which especially impacted dlv
	  lookups.  Reported by Hauke Lampe.

13 June 2009: Wouter
	- bug #254. removed random whitespace from example.conf.

12 June 2009: Wouter
	- Fixup potential wrong NSEC picked out of the cache.
	- If unfulfilled callbacks are deleted they are called with an error.
	- fptr wlist checks for mesh callbacks.
	- fwd above stub in configuration works.

11 June 2009: Wouter
	- Fix queries for type DS when forward or stub zones are there.
	  They are performed to higherup domains, and thus treated as if
	  going to higher zones when looking up the right forward or stub
	  server.  This makes a stub pointing to a local server that has
	  a local view of example.com signed with the same keys as are
	  publicly used work.  Reported by Johan Ihren.
	- Added build-unbound-localzone-from-hosts.pl to contrib, from
	  Dennis DeDonatis.  It converts /etc/hosts into config statements.
	- same thing fixed for forward-zone and DS, chain of trust from
	  public internet into the forward-zone works now.  Added unit test.

9 June 2009: Wouter
	- openssl key files are opened apache-style, when user is root and