@@ -2,6 +2,9 @@
 	- Fix of message parse bug where (specifically) an NSEC and RRSIG
 	  in the wrong order would be parsed, but put wrongly into internal
 	  structures so that later validation would fail.
+	- Extreme lenience for wrongly truncated replies where a positive
+	  reply has an NS in the authority but no signatures.  They are
+	  turned into minimal responses with only the (secure) answer.
 
 17 June 2009: Wouter
 	- CREDITS entry for cz.nic, sponsoring a 'summer of code' that was
